// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> can render without children 1`] = `
<div
  className="text-0-2-1"
/>
`;

exports[`<Text /> renders bold 1`] = `
<div
  className="text-0-2-1 text_bold-0-2-11"
>
  Bold
</div>
`;

exports[`<Text /> renders disabled 1`] = `
<div
  className="text-0-2-1 text_disabled-0-2-8"
>
  Disabled
</div>
`;

exports[`<Text /> renders inline 1`] = `
<span
  className="text-0-2-1 text_inline-0-2-3"
>
  Inline
</span>
`;

exports[`<Text /> renders inverted 1`] = `
<div
  className="text-0-2-1 text_inverted-0-2-9"
>
  Inverted
</div>
`;

exports[`<Text /> renders large 1`] = `
<h4
  className="text-0-2-1 text_large-0-2-7"
>
  Large
</h4>
`;

exports[`<Text /> renders light 1`] = `
<div
  className="text-0-2-1 text_light-0-2-12"
>
  Light
</div>
`;

exports[`<Text /> renders micro 1`] = `
<small
  className="text-0-2-1 text_micro-0-2-5"
>
  Micro
</small>
`;

exports[`<Text /> renders muted 1`] = `
<div
  className="text-0-2-1 text_muted-0-2-10"
>
  Muted
</div>
`;

exports[`<Text /> renders small 1`] = `
<div
  className="text-0-2-1 text_small-0-2-6"
>
  Small
</div>
`;

exports[`<Text /> renders uppercased 1`] = `
<div
  className="text-0-2-1 text_uppercased-0-2-14"
>
  Uppercased
</div>
`;

exports[`<Text /> renders with preserved whitespace 1`] = `
<div
  className="text-0-2-1 text_preserveWhitespace-0-2-4"
>
     
  Preserved whitespace
     
</div>
`;
